# expense-tracker-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 1bd5f74a6b2c_initial_migration.py  2139817779c2_initial_migration.py  5f44f35280f2_initial_migration.py
scripts/: run.sh
src/: main.py
src/api/: api_factory.py
src/api/expenses/: expense_container.py  expenses_handler.py  expenses_router.py  schemas.py
src/core/: config.py  database.py
src/core/exceptions/: database_exc.py  database_handler.py  exception_handlers.py
src/core/middleware/: auth.py
src/db/: models.py  repository.py
src/schemas/expense/: dto.py  schema.py
src/services/: exchange_rate_service.py  user_service.py
src/services/expense/: expense_controller.py  expense_manager.py  expense_repository.py  expense_service.py
src/services/report/: excel_report.py  interfaces.py  report_factory.py  report_manager.py
