[tool.poetry]
name = "expense-api"
package-mode = false
version = "0.1.0"
description = "Backend service for expense tracking, built with FastAPI. The API supports CRUD operations for expenses, currency conversion, and generating reports in Excel format."
authors = ["Moses-93 <moieseenko2001@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
